--- a/dealers.html
+++ b/dealers.html
@@ -11,8 +11,8 @@
 		<link rel="preload" href="./assets/fonts/WixMadeforDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Дилерам и представителям</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1769022114659"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1769022114659">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1769843300224"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1769843300224">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -71,7 +71,7 @@
 									</ul>
 								</div>
 								<div class="menu__footer">
-									<button data-fls-button="" class="menu__get-call btn btn--icon btn--fw --icon-phone">
+									<button data-fls-popup-link="get-call-popup" data-fls-button="" class="menu__get-call btn btn--icon btn--fw --icon-phone">
 										<span>Заказать звонок</span>
 									</button>
 								</div>
@@ -119,7 +119,7 @@
 											</div>
 										</a>
 									</div>
-									<button data-fls-dynamic=".low-menu__nav,949.98" data-fls-button="" class="header__call btn btn--icon --icon-phone">
+									<button data-fls-popup-link="get-call-popup" data-fls-dynamic=".low-menu__nav,949.98" data-fls-button="" class="header__call btn btn--icon --icon-phone">
 										<span>Заказать звонок</span>
 									</button>
 								</div>
@@ -285,36 +285,39 @@
 								<div class="dealers__body">
 									<div class="dealers__info">
 										<h2 class="dealers__title title" data-fls-title="">Наша дилерская сеть</h2>
-										<ul class="dealers__list">
-											<li class="dealers__item">
-												<div class="dealers__name">OОО «Конвенд»</div>
-												<div class="dealers__address">Россия, Ярославская область, г. Рыбинск, ул. Суркова 11-21</div>
-												<a href="tel:89206502929" class="dealers__tel">8 (920) 650 29 29</a>
-											</li>
-											<li class="dealers__item">
-												<div class="dealers__name">ЗАО «Белагро Бел»</div>
-												<div class="dealers__address">Беларусь, Минск, ул. Илимская, 58</div>
-												<a href="tel:89206502929" class="dealers__tel">+7(8452)53-95-53</a>
-											</li>
-											<li class="dealers__item">
-												<div class="dealers__name">ОАО «АСК «Белагро-Сервис»</div>
-												<div class="dealers__address">Россия, г. Саратов, Крымский проезд,3</div>
-												<a href="tel:89206502929" class="dealers__tel">+7(8452)53-95-53</a>
-											</li>
-											<li class="dealers__item">
-												<div class="dealers__name">ООО «Автомобили и СпецТехника»</div>
-												<div class="dealers__address">Россия, г. Ярославль, ул.Наумова,д.67/2</div>
-												<a href="tel:89206502929" class="dealers__tel">8 (800) 700-78-48</a>
-											</li>
-											<li class="dealers__item">
-												<div class="dealers__name">OОО «Спецкомплект Плюс»»</div>
-												<div class="dealers__address">
-													Россия, Ставропольский край, Минераловодский район, х.Красный
-							Пахарь,ул. Сосновая, 2а
-												</div>
-												<a href="tel:89206502929" class="dealers__tel">+4627468к592</a>
-											</li>
-										</ul>
+										<div class="dealers__slider dealers-slider swiper">
+											<ul class="dealers__list dealers-slider__wrapper swiper-wrapper">
+												<li class="dealers__item dealers-slider__slide swiper-slide">
+													<div class="dealers__name">OОО «Конвенд»</div>
+													<div class="dealers__address">Россия, Ярославская область, г. Рыбинск, ул. Суркова 11-21</div>
+													<a href="tel:89206502929" class="dealers__tel">8 (920) 650 29 29</a>
+												</li>
+												<li class="dealers__item dealers-slider__slide swiper-slide">
+													<div class="dealers__name">ЗАО «Белагро Бел»</div>
+													<div class="dealers__address">Беларусь, Минск, ул. Илимская, 58</div>
+													<a href="tel:89206502929" class="dealers__tel">+7(8452)53-95-53</a>
+												</li>
+												<li class="dealers__item dealers-slider__slide swiper-slide">
+													<div class="dealers__name">ОАО «АСК «Белагро-Сервис»</div>
+													<div class="dealers__address">Россия, г. Саратов, Крымский проезд,3</div>
+													<a href="tel:89206502929" class="dealers__tel">+7(8452)53-95-53</a>
+												</li>
+												<li class="dealers__item dealers-slider__slide swiper-slide">
+													<div class="dealers__name">ООО «Автомобили и СпецТехника»</div>
+													<div class="dealers__address">Россия, г. Ярославль, ул.Наумова,д.67/2</div>
+													<a href="tel:89206502929" class="dealers__tel">8 (800) 700-78-48</a>
+												</li>
+												<li class="dealers__item dealers-slider__slide swiper-slide">
+													<div class="dealers__name">OОО «Спецкомплект Плюс»»</div>
+													<div class="dealers__address">
+														Россия, Ставропольский край, Минераловодский район, х.Красный
+								Пахарь,ул. Сосновая, 2а
+													</div>
+													<a href="tel:89206502929" class="dealers__tel">+4627468к592</a>
+												</li>
+											</ul>
+											<div class="swiper-scrollbar"></div>
+										</div>
 									</div>
 									<div class="dealers__map">
 										<iframe class="dealers__iframe" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ac54efc0841b5c8559eeb87dea08a49c1da0e23ed5514becd85201e513dcfc2af&amp;source=constructor" width="100%" height="560" frameborder="0"></iframe>
@@ -428,7 +431,7 @@
 				<div data-fls-popup-wrapper="" class="popup__wrapper">
 					<div data-fls-popup-body="" class="popup__body">
 						<button data-fls-popup-close="" type="button" class="popup__close --icon-cross"></button>
-						<div data-fls-popup-content="" class="popup__text">
+						<div data-fls-popup-content="" class="popup__content">
 							<div class="nums nums--column">
 								<a href="tel:+375291235667" class="nums__item">
 									<img class="nums__icon" src="./assets/img/countries/belarus.png" alt="Image">
@@ -445,6 +448,40 @@
 									</div>
 								</a>
 							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div data-fls-popup="get-call-popup" aria-hidden="true" class="popup popup-call">
+				<div data-fls-popup-wrapper="" class="popup__wrapper">
+					<div data-fls-popup-body="" class="popup__body">
+						<button data-fls-popup-close="" type="button" class="popup__close --icon-cross"></button>
+						<div data-fls-popup-content="" class="popup__content">
+							<h5 class="popup__title">Заказать звонок</h5>
+							<div class="popup__text">
+								Оставьте свои контактные данные — мы перезвоним вам в ближайшее время и ответим на все вопросы.
+							</div>
+							<form data-fls-form="" class="popup__form form-call form">
+								<fieldset class="form__fieldset">
+									<legend class="form__legend">Ваше имя</legend>
+									<label for="get-call-name" class="form__label">Ваше имя</label>
+									<input class="form__input input" id="get-call-name" data-fls-input="" placeholder="Как к вам обращаться?" type="text" name="name" autocomplete="name" required>
+								</fieldset>
+								<fieldset class="form__fieldset">
+									<legend class="form__legend">Номер телефона</legend>
+									<label for="get-call-tel" class="form__label">Номер телефона</label>
+									<div class="form__tel-input tel-input">
+										<div class="tel-input__code">
+											<div class="tel-input__country">
+												<img src="./assets/img/countries/belarus.png" alt="Image">
+											</div>
+											<div class="tel-input__nums">+375</div>
+										</div>
+										<input class="form__input tel-input__input input" id="get-call-tel" data-fls-input="" placeholder="" type="text" name="tel" autocomplete="off" required>
+									</div>
+								</fieldset>
+								<button type="submit" class="form__btn-submit btn btn--fw">Отправить</button>
+							</form>
 						</div>
 					</div>
 				</div>
