--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<link rel="preload" href="./assets/fonts/WixMadeforDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Евромаш - Главная</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1769022114661"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1769022114661">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1769843300225"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1769843300225">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -71,7 +71,7 @@
 									</ul>
 								</div>
 								<div class="menu__footer">
-									<button data-fls-button="" class="menu__get-call btn btn--icon btn--fw --icon-phone">
+									<button data-fls-popup-link="get-call-popup" data-fls-button="" class="menu__get-call btn btn--icon btn--fw --icon-phone">
 										<span>Заказать звонок</span>
 									</button>
 								</div>
@@ -119,7 +119,7 @@
 											</div>
 										</a>
 									</div>
-									<button data-fls-dynamic=".low-menu__nav,949.98" data-fls-button="" class="header__call btn btn--icon --icon-phone">
+									<button data-fls-popup-link="get-call-popup" data-fls-dynamic=".low-menu__nav,949.98" data-fls-button="" class="header__call btn btn--icon --icon-phone">
 										<span>Заказать звонок</span>
 									</button>
 								</div>
@@ -231,7 +231,7 @@
 							<div data-fls-slider="" class="intro__slider-intro swiper slider-intro">
 								<div class="intro__wrapper swiper-wrapper">
 									<a href="#" class="slider-intro__slide slide-intro swiper-slide">
-										<img class="slider-intro__img" src="./assets/img/intro-catalog/01.png" alt="Image">
+										<img class="slider-intro__img" src="./assets/img/intro-slider/01.jpg" alt="Image">
 										<div class="slider-intro__body">
 											<div class="slider-intro__title">Факты о компании или о продукции</div>
 										</div>
@@ -319,7 +319,7 @@
 							<div class="catalog-intro__item">
 								<div class="catalog-intro__head" style="background-color: var(--bgAccent);">
 									<a href="#" class="catalog-intro__name">Оборудование для ремонта дорог</a>
-									<div class="catalog-intro__text">Для ухода за обочинами, газонами и придорожными территориями</div>
+									<div class="catalog-intro__text">Оборудование для восстановления асфальтобетонных и цементобетонных покрытий</div>
 									<a href="#" class="catalog-intro__btn btn btn--light btn--sm --icon-arrow-right"></a>
 								</div>
 								<div class="catalog-intro__img">
@@ -329,23 +329,17 @@
 							<div class="catalog-intro__item">
 								<div class="catalog-intro__head catalog-intro__head--light-color" style="background-color: var(--bgAccent2);">
 									<a href="#" class="catalog-intro__name">Снегоуборочная техника</a>
-									<div class="catalog-intro__text">
-										Оборудование для очистки дорог и территорий от снега, наледи и
-							зимних отложений
-									</div>
+									<div class="catalog-intro__text">Оборудование для очистки дорог и территорий от снега, наледи и зимних отложений</div>
 									<a href="#" class="catalog-intro__btn btn btn--light btn--sm --icon-arrow-right"></a>
 								</div>
 								<div class="catalog-intro__img">
 									<img src="./assets/img/intro-catalog/02.png" alt="Image">
 								</div>
 							</div>
-							<div class="catalog-intro__item">
+							<div class="catalog-intro__item catalog-intro__item--first">
 								<div class="catalog-intro__head catalog-intro__head--light-color" style="background-color: var(--bgInvert);">
-									<a href="#" class="catalog-intro__name">Навесное оборудование на МТЗ</a>
-									<div class="catalog-intro__text">
-										Широкий выбор навесного и прицепного оборудования, совместимого
-							с тракторами МТЗ
-									</div>
+									<a href="#" class="catalog-intro__name">Дорожные роторные косилки</a>
+									<div class="catalog-intro__text">Для ухода за обочинами, газонами и придорожными территориями</div>
 									<a href="#" class="catalog-intro__btn btn btn--light btn--sm --icon-arrow-right"></a>
 								</div>
 								<div class="catalog-intro__img">
@@ -354,10 +348,9 @@
 							</div>
 							<div class="catalog-intro__item">
 								<div class="catalog-intro__head" style="background-color: var(--bgAccent3);">
-									<a href="#" class="catalog-intro__name">Запчасти для спецтехники</a>
+									<a href="#" class="catalog-intro__name">Навесное оборудование на МТЗ</a>
 									<div class="catalog-intro__text">
-										Комплектующие и расходники для ремонта обслуживания и
-							модернизации спецтехники
+										Широкий выбор навесного и прицепного оборудования, совместимого с тракторами МТЗ
 									</div>
 									<a href="#" class="catalog-intro__btn btn btn--light btn--sm --icon-arrow-right"></a>
 								</div>
@@ -367,8 +360,8 @@
 							</div>
 							<div class="catalog-intro__item">
 								<div class="catalog-intro__head" style="background-color: var(--bgAccent4);">
-									<a href="#" class="catalog-intro__name">Оборудование для ремонта дорог</a>
-									<div class="catalog-intro__text">Для ухода за обочинами, газонами и придорожными территориями</div>
+									<a href="#" class="catalog-intro__name">Запчасти для спецтехники</a>
+									<div class="catalog-intro__text">Комплектующие и расходники для ремонта обслуживания и модернизации спецтехники</div>
 									<a href="#" class="catalog-intro__btn btn btn--light btn--sm --icon-arrow-right"></a>
 								</div>
 								<div class="catalog-intro__img">
@@ -574,36 +567,39 @@
 							<div class="dealers__body">
 								<div class="dealers__info">
 									<h2 class="dealers__title title" data-fls-title="">Наша дилерская сеть</h2>
-									<ul class="dealers__list">
-										<li class="dealers__item">
-											<div class="dealers__name">OОО «Конвенд»</div>
-											<div class="dealers__address">Россия, Ярославская область, г. Рыбинск, ул. Суркова 11-21</div>
-											<a href="tel:89206502929" class="dealers__tel">8 (920) 650 29 29</a>
-										</li>
-										<li class="dealers__item">
-											<div class="dealers__name">ЗАО «Белагро Бел»</div>
-											<div class="dealers__address">Беларусь, Минск, ул. Илимская, 58</div>
-											<a href="tel:89206502929" class="dealers__tel">+7(8452)53-95-53</a>
-										</li>
-										<li class="dealers__item">
-											<div class="dealers__name">ОАО «АСК «Белагро-Сервис»</div>
-											<div class="dealers__address">Россия, г. Саратов, Крымский проезд,3</div>
-											<a href="tel:89206502929" class="dealers__tel">+7(8452)53-95-53</a>
-										</li>
-										<li class="dealers__item">
-											<div class="dealers__name">ООО «Автомобили и СпецТехника»</div>
-											<div class="dealers__address">Россия, г. Ярославль, ул.Наумова,д.67/2</div>
-											<a href="tel:89206502929" class="dealers__tel">8 (800) 700-78-48</a>
-										</li>
-										<li class="dealers__item">
-											<div class="dealers__name">OОО «Спецкомплект Плюс»»</div>
-											<div class="dealers__address">
-												Россия, Ставропольский край, Минераловодский район, х.Красный
-							Пахарь,ул. Сосновая, 2а
-											</div>
-											<a href="tel:89206502929" class="dealers__tel">+4627468к592</a>
-										</li>
-									</ul>
+									<div class="dealers__slider dealers-slider swiper">
+										<ul class="dealers__list dealers-slider__wrapper swiper-wrapper">
+											<li class="dealers__item dealers-slider__slide swiper-slide">
+												<div class="dealers__name">OОО «Конвенд»</div>
+												<div class="dealers__address">Россия, Ярославская область, г. Рыбинск, ул. Суркова 11-21</div>
+												<a href="tel:89206502929" class="dealers__tel">8 (920) 650 29 29</a>
+											</li>
+											<li class="dealers__item dealers-slider__slide swiper-slide">
+												<div class="dealers__name">ЗАО «Белагро Бел»</div>
+												<div class="dealers__address">Беларусь, Минск, ул. Илимская, 58</div>
+												<a href="tel:89206502929" class="dealers__tel">+7(8452)53-95-53</a>
+											</li>
+											<li class="dealers__item dealers-slider__slide swiper-slide">
+												<div class="dealers__name">ОАО «АСК «Белагро-Сервис»</div>
+												<div class="dealers__address">Россия, г. Саратов, Крымский проезд,3</div>
+												<a href="tel:89206502929" class="dealers__tel">+7(8452)53-95-53</a>
+											</li>
+											<li class="dealers__item dealers-slider__slide swiper-slide">
+												<div class="dealers__name">ООО «Автомобили и СпецТехника»</div>
+												<div class="dealers__address">Россия, г. Ярославль, ул.Наумова,д.67/2</div>
+												<a href="tel:89206502929" class="dealers__tel">8 (800) 700-78-48</a>
+											</li>
+											<li class="dealers__item dealers-slider__slide swiper-slide">
+												<div class="dealers__name">OОО «Спецкомплект Плюс»»</div>
+												<div class="dealers__address">
+													Россия, Ставропольский край, Минераловодский район, х.Красный
+								Пахарь,ул. Сосновая, 2а
+												</div>
+												<a href="tel:89206502929" class="dealers__tel">+4627468к592</a>
+											</li>
+										</ul>
+										<div class="swiper-scrollbar"></div>
+									</div>
 								</div>
 								<div class="dealers__map">
 									<iframe class="dealers__iframe" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ac54efc0841b5c8559eeb87dea08a49c1da0e23ed5514becd85201e513dcfc2af&amp;source=constructor" width="100%" height="560" frameborder="0"></iframe>
@@ -716,7 +712,7 @@
 				<div data-fls-popup-wrapper="" class="popup__wrapper">
 					<div data-fls-popup-body="" class="popup__body">
 						<button data-fls-popup-close="" type="button" class="popup__close --icon-cross"></button>
-						<div data-fls-popup-content="" class="popup__text">
+						<div data-fls-popup-content="" class="popup__content">
 							<div class="nums nums--column">
 								<a href="tel:+375291235667" class="nums__item">
 									<img class="nums__icon" src="./assets/img/countries/belarus.png" alt="Image">
@@ -733,6 +729,40 @@
 									</div>
 								</a>
 							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div data-fls-popup="get-call-popup" aria-hidden="true" class="popup popup-call">
+				<div data-fls-popup-wrapper="" class="popup__wrapper">
+					<div data-fls-popup-body="" class="popup__body">
+						<button data-fls-popup-close="" type="button" class="popup__close --icon-cross"></button>
+						<div data-fls-popup-content="" class="popup__content">
+							<h5 class="popup__title">Заказать звонок</h5>
+							<div class="popup__text">
+								Оставьте свои контактные данные — мы перезвоним вам в ближайшее время и ответим на все вопросы.
+							</div>
+							<form data-fls-form="" class="popup__form form-call form">
+								<fieldset class="form__fieldset">
+									<legend class="form__legend">Ваше имя</legend>
+									<label for="get-call-name" class="form__label">Ваше имя</label>
+									<input class="form__input input" id="get-call-name" data-fls-input="" placeholder="Как к вам обращаться?" type="text" name="name" autocomplete="name" required>
+								</fieldset>
+								<fieldset class="form__fieldset">
+									<legend class="form__legend">Номер телефона</legend>
+									<label for="get-call-tel" class="form__label">Номер телефона</label>
+									<div class="form__tel-input tel-input">
+										<div class="tel-input__code">
+											<div class="tel-input__country">
+												<img src="./assets/img/countries/belarus.png" alt="Image">
+											</div>
+											<div class="tel-input__nums">+375</div>
+										</div>
+										<input class="form__input tel-input__input input" id="get-call-tel" data-fls-input="" placeholder="" type="text" name="tel" autocomplete="off" required>
+									</div>
+								</fieldset>
+								<button type="submit" class="form__btn-submit btn btn--fw">Отправить</button>
+							</form>
 						</div>
 					</div>
 				</div>
