--- a/licenses.html
+++ b/licenses.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="theme-color" content="#ffffff">
 		<link rel="preload" href="./assets/fonts/WixMadeforText-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="preload" href="./assets/fonts/WixMadeforText-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="preload" href="./assets/fonts/WixMadeforText-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
@@ -11,8 +12,8 @@
 		<link rel="preload" href="./assets/fonts/WixMadeforDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Лицензии и сертификаты</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1769843300225"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1769843300225">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1769940005452"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1769940005452">
 	</head>
 	<body>
 		<div class="wrapper">
