--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" "="">
 		<meta name="theme-color" content="#ffffff">
 		<link rel="preload" href="./assets/fonts/WixMadeforText-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="preload" href="./assets/fonts/WixMadeforText-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
@@ -12,8 +12,8 @@
 		<link rel="preload" href="./assets/fonts/WixMadeforDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>catalog</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1769940005450"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1769940005450">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1769943060787"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1769943060787">
 	</head>
 	<body>
 		<div class="wrapper">
