--- a/blog.html
+++ b/blog.html
@@ -12,8 +12,8 @@
 		<link rel="preload" href="./assets/fonts/WixMadeforDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Справочник</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1770232856811"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1770232856811">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1770233259212"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1770233259212">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -254,73 +254,61 @@
 										<span class="--icon-chevron-right"></span>
 									</a>
 								</h2>
-								<article>
-									<article class="blog__article blog-card" data-fls-blogcard="">
-										<div class="blog-card__picture">
-											<img src="./assets/img/blog/02.png" alt="Image">
-										</div>
-										<h2 class="blog-card__name">
-											<a href="article" class="blog-card__link">
-												Оборудование для содержания дорог и их ремонта
-												<span class="--icon-chevron-right"></span>
-											</a>
-										</h2>
-										<article>
-											<article class="blog__article blog-card" data-fls-blogcard="">
-												<div class="blog-card__picture">
-													<img src="./assets/img/about/%D0%B7%D0%B0%D0%B2%D0%BE%D0%B4-%D0%B5%D0%B2%D1%80%D0%BE%D0%BC%D0%B0%D1%88.png" alt="Image">
-												</div>
-												<h2 class="blog-card__name">
-													<a href="article" class="blog-card__link">
-														Оборудование для содержания дорог и их ремонта
-														<span class="--icon-chevron-right"></span>
-													</a>
-												</h2>
-												<article>
-													<article class="blog__article blog-card" data-fls-blogcard="">
-														<div class="blog-card__picture">
-															<img src="./assets/img/article/01.png" alt="Image">
-														</div>
-														<h2 class="blog-card__name">
-															<a href="article" class="blog-card__link">
-																Оборудование для содержания дорог и их ремонта
-																<span class="--icon-chevron-right"></span>
-															</a>
-														</h2>
-														<article>
-															<article class="blog__article blog-card" data-fls-blogcard="">
-																<div class="blog-card__picture">
-																	<img src="./assets/img/blog/02.png" alt="Image">
-																</div>
-																<h2 class="blog-card__name">
-																	<a href="article" class="blog-card__link">
-																		Оборудование для содержания дорог и их ремонта ремонта
-                                                            ремонта
-																		<span class="--icon-chevron-right"></span>
-																	</a>
-																</h2>
-																<article>
-																	<article class="blog__article blog-card" data-fls-blogcard="">
-																		<div class="blog-card__picture">
-																			<img src="./assets/img/about/%D0%B7%D0%B0%D0%B2%D0%BE%D0%B4-%D0%B5%D0%B2%D1%80%D0%BE%D0%BC%D0%B0%D1%88.png" alt="Image">
-																		</div>
-																		<h2 class="blog-card__name">
-																			<a href="article" class="blog-card__link">
-																				Оборудование для содержания дорог и их ремонта
-																				<span class="--icon-chevron-right"></span>
-																			</a>
-																		</h2>
-																		<article></article>
-																	</article>
-																</article>
-															</article>
-														</article>
-													</article>
-												</article>
-											</article>
-										</article>
-									</article>
-								</article>
+							</article>
+							<article class="blog__article blog-card" data-fls-blogcard="">
+								<div class="blog-card__picture">
+									<img src="./assets/img/blog/02.png" alt="Image">
+								</div>
+								<h2 class="blog-card__name">
+									<a href="article" class="blog-card__link">
+										Оборудование для содержания дорог и их ремонта
+										<span class="--icon-chevron-right"></span>
+									</a>
+								</h2>
+							</article>
+							<article class="blog__article blog-card" data-fls-blogcard="">
+								<div class="blog-card__picture">
+									<img src="./assets/img/about/%D0%B7%D0%B0%D0%B2%D0%BE%D0%B4-%D0%B5%D0%B2%D1%80%D0%BE%D0%BC%D0%B0%D1%88.png" alt="Image">
+								</div>
+								<h2 class="blog-card__name">
+									<a href="article" class="blog-card__link">
+										Оборудование для содержания дорог и их ремонта
+										<span class="--icon-chevron-right"></span>
+									</a>
+								</h2>
+							</article>
+							<article class="blog__article blog-card" data-fls-blogcard="">
+								<div class="blog-card__picture">
+									<img src="./assets/img/article/01.png" alt="Image">
+								</div>
+								<h2 class="blog-card__name">
+									<a href="article" class="blog-card__link">
+										Оборудование для содержания дорог и их ремонта
+										<span class="--icon-chevron-right"></span>
+									</a>
+								</h2>
+							</article>
+							<article class="blog__article blog-card" data-fls-blogcard="">
+								<div class="blog-card__picture">
+									<img src="./assets/img/blog/02.png" alt="Image">
+								</div>
+								<h2 class="blog-card__name">
+									<a href="article" class="blog-card__link">
+										Оборудование для содержания дорог и их ремонта ремонта ремонта
+										<span class="--icon-chevron-right"></span>
+									</a>
+								</h2>
+							</article>
+							<article class="blog__article blog-card" data-fls-blogcard="">
+								<div class="blog-card__picture">
+									<img src="./assets/img/about/%D0%B7%D0%B0%D0%B2%D0%BE%D0%B4-%D0%B5%D0%B2%D1%80%D0%BE%D0%BC%D0%B0%D1%88.png" alt="Image">
+								</div>
+								<h2 class="blog-card__name">
+									<a href="article" class="blog-card__link">
+										Оборудование для содержания дорог и их ремонта
+										<span class="--icon-chevron-right"></span>
+									</a>
+								</h2>
 							</article>
 						</div>
 						<div class="blog__pagination">
