--- a/product.html
+++ b/product.html
@@ -12,8 +12,8 @@
 		<link rel="preload" href="./assets/fonts/WixMadeforDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Модель 567</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1771351023742"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1771351023742">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1772127396324"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1772127396324">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -422,50 +422,59 @@
 									</details>
 									<details class="spollers__item">
 										<summary id="product-descr" class="spollers__title">Описание</summary>
-										<div class="spollers__body">
-											<p>
-												Фреза дорожная ЕМ-600.01.00.000 предназначена для подготовки дорожных, уличных,
-                                    тротуарных и аэродромных выбоин к заливке асфальто- или цементобетонным раствором
-                                    при
-                                    ямочном ремонте дорожных покрытий. Установка гидропривода на фрезу, навеска ее на
-                                    механизм задней трехточечной сельскохозяйственной навески автотракторной механики
-                                    позволило повысить производительность, снизить вибрацию и увеличить надежность в
-                                    эксплуатации по сравнению с аналогами.
-											</p>
-											<span>
-												Отличие от выпускаемых на территории стран СНГ дорожных фрез заключается в
-                                    следующем:
-											</span>
-											<ul>
-												<li>
-													Впервые появилась возможность агрегатировать оборудование на сельхоз навеску
-                                        любого трактора и как следствие это более чем в 2 раза сокращает время
-                                        монтажа-демонтажа.
-												</li>
-												<li>
-													Впервые применена система крепления барабана, позволяющая не демонтируя
-                                        оборудование, производить замену барабана, ориентируясь на необходимый вид работ
-                                        по ремонту дорожного покрытия.Образующаяся крошка пригодна для повторного
-                                        использования в
-													<a href="product">рециклере асфальтобетона ЕМ-3200</a>
-													.
-												</li>
-												<li>
-													Впервые появилась возможность плавно регулировать глубину фрезерования во время
-                                        выполнения работ, обеспечивая более качественное их выполнение.
-												</li>
-											</ul>
+										<div class="spollers__body textual">
+											<div class="textual__main">
+												<p>
+													Фреза дорожная ЕМ-600.01.00.000 предназначена для подготовки дорожных, уличных,
+                                        тротуарных и аэродромных выбоин к заливке асфальто- или цементобетонным
+                                        раствором
+                                        при
+                                        ямочном ремонте дорожных покрытий. Установка гидропривода на фрезу, навеска ее
+                                        на
+                                        механизм задней трехточечной сельскохозяйственной навески автотракторной
+                                        механики
+                                        позволило повысить производительность, снизить вибрацию и увеличить надежность в
+                                        эксплуатации по сравнению с аналогами.
+												</p>
+												<span>
+													Отличие от выпускаемых на территории стран СНГ дорожных фрез заключается в
+                                        следующем:
+												</span>
+												<ul>
+													<li>
+														Впервые появилась возможность агрегатировать оборудование на сельхоз навеску
+                                            любого трактора и как следствие это более чем в 2 раза сокращает время
+                                            монтажа-демонтажа.
+													</li>
+													<li>
+														Впервые применена система крепления барабана, позволяющая не демонтируя
+                                            оборудование, производить замену барабана, ориентируясь на необходимый вид
+                                            работ
+                                            по ремонту дорожного покрытия.Образующаяся крошка пригодна для повторного
+                                            использования в
+														<a href="product">рециклере асфальтобетона ЕМ-3200</a>
+														.
+													</li>
+													<li>
+														Впервые появилась возможность плавно регулировать глубину фрезерования во
+                                            время
+                                            выполнения работ, обеспечивая более качественное их выполнение.
+													</li>
+												</ul>
+											</div>
 										</div>
 									</details>
 									<details class="spollers__item">
 										<summary class="spollers__title">Сертификация</summary>
-										<div class="spollers__body">
-											<p>
-												Установка гидропривода на фрезу, навеска ее на механизм задней трехточечной
-                                    сельскохозяйственной навески автотракторной механики позволило повысить
-                                    производительность, снизить вибрацию и увеличить надежность в эксплуатации по
-                                    сравнению с аналогами.
-											</p>
+										<div class="spollers__body textual">
+											<div class="textual__main">
+												<p>
+													Установка гидропривода на фрезу, навеска ее на механизм задней трехточечной
+                                        сельскохозяйственной навески автотракторной механики позволило повысить
+                                        производительность, снизить вибрацию и увеличить надежность в эксплуатации по
+                                        сравнению с аналогами.
+												</p>
+											</div>
 										</div>
 									</details>
 									<details class="spollers__item">
