--- a/catalogfirstlevel.html
+++ b/catalogfirstlevel.html
@@ -12,8 +12,8 @@
 		<link rel="preload" href="./assets/fonts/WixMadeforDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Оборудование для ремонта дорог</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1771351023739"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1771351023739">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1772127396323"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1772127396323">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -448,19 +448,22 @@
 									</div>
 								</div>
 							</div>
-							<div class="catalog__text-block">
-								<h3>СЕО текст заголовок</h3>
-								<p>
-									Проведение ежегодных профилактических мероприятий по ремонту дорожного покрытия сопряжено с рядом
-            трудностей.
-            Асфальт подвергается повреждениям намного чаще, чем его ремонтируют, и обычно проблемы с ним возникают в
-            самый неподходящий сезон. Рециклер асфальтобетона EM-3200 предназначен для решения большинства проблем,
-            связанных с ремонтными работами дорожного покрытия.
-								</p>
-								<p>
-									Самое главное предназначение рециклера - ямочный ремонт при помощи литого асфальта. Технические особенности
-            модели EM-3200 позволяют использовать его круглый год вне зависимости от сезона и погодных условий.
-								</p>
+							<div class="catalog__text-block textual">
+								<div class="textual__main">
+									<h3>СЕО текст заголовок</h3>
+									<p>
+										Проведение ежегодных профилактических мероприятий по ремонту дорожного покрытия сопряжено с рядом
+                трудностей.
+                Асфальт подвергается повреждениям намного чаще, чем его ремонтируют, и обычно проблемы с ним возникают в
+                самый неподходящий сезон. Рециклер асфальтобетона EM-3200 предназначен для решения большинства проблем,
+                связанных с ремонтными работами дорожного покрытия.
+									</p>
+									<p>
+										Самое главное предназначение рециклера - ямочный ремонт при помощи литого асфальта. Технические
+                особенности
+                модели EM-3200 позволяют использовать его круглый год вне зависимости от сезона и погодных условий.
+									</p>
+								</div>
 							</div>
 						</main>
 					</div>
