--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<link rel="preload" href="./assets/fonts/WixMadeforDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Евромаш - Главная</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1771351023745"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1771351023745">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1772127396326"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1772127396326">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -568,7 +568,7 @@
 							<div class="dealers__body">
 								<div class="dealers__info">
 									<h2 class="dealers__title title" data-fls-title="">Наша дилерская сеть</h2>
-									<div class="dealers__slider dealers-slider swiper">
+									<div data-fls-slider="" class="dealers__slider dealers-slider swiper">
 										<ul class="dealers__list dealers-slider__wrapper swiper-wrapper">
 											<li class="dealers__item dealers-slider__slide swiper-slide">
 												<div class="dealers__name">OОО «Конвенд»</div>
